--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,7 @@
               <a class="nav-link" href="./index.html">Студія</a>
             </li>
             <li class="header-item">
-              <a class="nav-link" href="./portfolio.html">Портфоліо</a>
+              <a class="nav-portfolio" href="./portfolio.html">Портфоліо</a>
             </li>
             <li class="header-item">
               <a class="nav-link" href="#">Контакти</a>
