--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <nav class="header-nav">
         <ul class="header-list">
           <li class="header-item">
-            <a class="nav-link" href="./index.html">Студія</a>
+            <a class="nav-studio" href="./index.html">Студія</a>
           </li>
           <li class="header-item">
             <a class="nav-link" href="./portfolio.html">Портфоліо</a>
