--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <img
               src="./img/igor.jpg"
               alt="молодяга в коричневій сорочці"
-              class="work-picture"
+              class="team-picture"
             />
             <div class="team-vraper">
             <h3 class="team-list">Ігор Дем'яненко</h3>
@@ -122,9 +122,9 @@
           </li>
           <li class="team-item">
             <img
-              src="./img/persona.jpg"
+              src="./img/olga.jpg"
               alt=" жінка в чорному піджаку"
-              class="work-picture"
+              class="team-picture"
             />
             <div class="team-vraper">
             <h3 class="team-list">Ольга Рєпіна</h3>
@@ -135,7 +135,7 @@
             <img
               src="./img/mikola.jpg"
               alt="молодяга в блакиній сорочці"
-              class="work-picture"
+              class="team-picture"
             />
             <div class="team-vraper">
             <h3 class="team-list">Микола Тарасов</h3>
@@ -146,7 +146,7 @@
             <img
               src="./img/misha.jpg"
               alt="молодяга в чорній футболці "
-              class="work-picture"
+              class="team-picture"
             />
             <div class="team-vraper">
             <h3 class="team-list">Михайло Єрмаков</h3>
